test_end_to_end/big_small_test/config/fortio-client-big.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-client-big-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-client-big
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyImage: "istio/proxyv2:1.15.3"
        status.sidecar.istio.io/port: "0"
        proxy.istio.io/config: "{concurrency: 16}"
        sidecar.istio.io/proxyCPU: "1m" 
        sidecar.istio.io/proxyiMemory: "1Mi"
      labels:
        app: fortio-client-big
    spec:
      nodeSelector:
        kubernetes.io/hostname: density-node2
      containers:
        - image: fortio/fortio
          imagePullPolicy: IfNotPresent
          name: fortio-client-big
          ports:
            - containerPort: 8080
          resources:
            #limits:
            #  cpu: 1
            #  memory: 1024Mi
            requests:
              cpu: 1m
              memory: 1Mi
