test_end_to_end/big_small_test/config/fortio-service-small.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fortio-server-small
  name: fortio-server-small
  namespace: default 
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: fortio-server-small
